--- a/NAVI_GOOGLE/app/src/main/res/layout/activity_maps.xml
+++ b/NAVI_GOOGLE/app/src/main/res/layout/activity_maps.xml
@@ -35,6 +35,7 @@
         android:layout_toRightOf="@+id/ic_magnify"
         android:layout_centerVertical="true"
         android:textSize="15sp"
+        android:singleLine="true"
         android:textColor="#000"
         android:id="@+id/input_search"
         android:background="@null"
