--- a/NAVI_GOOGLE/app/src/main/res/layout/activity_maps.xml
+++ b/NAVI_GOOGLE/app/src/main/res/layout/activity_maps.xml
@@ -5,41 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/map"
-    tools:context=".MapsActivity"
-    android:name="com.google.android.gms.maps.SupportMapFragment" />
-    <RelativeLayout
-    android:background="@drawable/white_board"
-    android:elevation="10dp"
-    android:id="@+id/relLayout1"
-    android:layout_height="50dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="10dp"
-    android:layout_width="match_parent">
-
-    <ImageView
-        android:id="@+id/ic_magnify"
-        android:layout_centerVertical="true"
-        android:layout_height="15dp"
-        android:layout_marginLeft="10dp"
-        android:layout_width="15dp"
-        android:src="@drawable/ic_magnify" />
-
-    <AutoCompleteTextView
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_toRightOf="@+id/ic_magnify"
-        android:layout_centerVertical="true"
-        android:textSize="15sp"
-        android:singleLine="true"
-        android:textColor="#000"
-        android:id="@+id/input_search"
-        android:background="@null"
-        android:hint="Enter Address, City or Zip Code"
-        android:imeOptions="actionSearch"/>
+        android:id="@+id/map"
+        tools:context=".MapActivity"
+        android:name="com.google.android.gms.maps.SupportMapFragment" />
+
+    <RelativeLayout
+        android:background="@drawable/white_board"
+        android:elevation="10dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent">
+
+        <fragment
+            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+            android:id="@+id/input_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/START"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="29dp"
+        android:text="Get Direction" />
+
 </RelativeLayout>
