--- a/NAVI_GOOGLE/app/src/main/res/values/colors.xml
+++ b/NAVI_GOOGLE/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorPolyLineBlue">#29AAE1</color>
 </resources>
