--- a/NAVI_GOOGLE/app/src/main/res/layout/activity_maps.xml
+++ b/NAVI_GOOGLE/app/src/main/res/layout/activity_maps.xml
@@ -29,7 +29,7 @@
     </RelativeLayout>
 
     <Button
-        android:id="@+id/START"
+        android:id="@+id/nav_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
